# open-cyber-lab

./: .cyberlab_progress.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOOD_FIRST_ISSUES.md  LICENSE  Makefile  README.md  cyberlab.py  pyproject.toml  requirements.txt  security.txt
.github/workflows/: ci.yml
cyberlab/: __init__.py  cli.py  lab_loader.py  progress.py
labs/: bruteforce.py  command_injection.py  csrf.py  deserialization.py  directory_traversal.py  idor.py  information_disclosure.py  jwt.py  man_in_the_middle.py  oauth.py  password_cracking.py  race_condition.py  ransomware.py  sql_injection.py  ssrf.py  xss.py  xxe.py
tests/: __init__.py  test_cli.py  test_lab_loader.py  test_labs.py  test_progress.py
